# firmware-watcher

./: .env.example  FLOW.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  app_main.c  audio.c  audio.h  avatar_img.c  config.c  config.h  config_store.c  display.c  display.h  events.h  http.c  improv.c  led.c  mqtt.c  mqtt.h  power.c  power.h  record.c  scenario_img.c  secret_config.h  stream_player.c  stream_player.h
